--- a/Ecommerce-APP/public/css/main.css
+++ b/Ecommerce-APP/public/css/main.css
@@ -1,22 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
 * {
   box-sizing: border-box;
 }
-
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 main {
   padding: 1rem;
   margin: auto;
 }
-
 form {
   display: inline;
+}
+
+.centered {
+  text-align: center;
 }
 
 .main-header {
@@ -27,36 +29,30 @@ form {
   display: flex;
   align-items: center;
 }
-
 .main-header__nav {
   height: 100%;
   display: none;
   align-items: center;
 }
-
 .main-header__item-list {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
 }
-
 .main-header__item {
   margin: 0 1rem;
   padding: 0;
 }
-
 .main-header__item a {
   text-decoration: none;
   color: white;
 }
-
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
   color: #ffeb3b;
 }
-
 .mobile-nav {
   width: 30rem;
   height: 100vh;
@@ -70,11 +66,9 @@ form {
   transform: translateX(-100%);
   transition: transform 0.3s ease-out;
 }
-
 .mobile-nav.open {
   transform: translateX(0);
 }
-
 .mobile-nav__item-list {
   list-style: none;
   display: flex;
@@ -82,19 +76,16 @@ form {
   margin: 0;
   padding: 0;
 }
-
 .mobile-nav__item {
   margin: 1rem;
   padding: 0;
 }
-
 .mobile-nav__item a {
   text-decoration: none;
   color: black;
   font-size: 1.5rem;
   padding: 0.5rem 2rem;
 }
-
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a.active {
@@ -102,7 +93,6 @@ form {
   color: white;
   border-radius: 3px;
 }
-
 #side-menu-toggle {
   border: 1px solid white;
   font: inherit;
@@ -112,17 +102,14 @@ form {
   color: white;
   cursor: pointer;
 }
-
 #side-menu-toggle:focus {
   outline: none;
 }
-
 #side-menu-toggle:active,
 #side-menu-toggle:hover {
   color: #ffeb3b;
   border-color: #ffeb3b;
 }
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -133,48 +120,39 @@ form {
   z-index: 5;
   display: none;
 }
-
 .grid {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: stretch;
 }
-
 .card {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
-
 .card__header,
 .card__content {
   padding: 1rem;
 }
-
 .card__header h1,
 .card__content h1,
 .card__content h2,
 .card__content p {
   margin: 0;
 }
-
 .card__image {
   width: 100%;
 }
-
 .card__image img {
   width: 100%;
 }
-
 .card__actions {
   padding: 1rem;
   text-align: center;
 }
-
 .card__actions button,
 .card__actions a {
   margin: 0 0.25rem;
 }
-
 .btn {
   display: inline-block;
   padding: 0.25rem 1rem;
@@ -186,18 +164,15 @@ form {
   border-radius: 3px;
   cursor: pointer;
 }
-
 .btn:hover,
 .btn:active {
   background-color: #00695c;
   color: white;
 }
-
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
   }
-
   #side-menu-toggle {
     display: none;
   }
