--- a/Ecommerce-APP/views/shop/cart.ejs
+++ b/Ecommerce-APP/views/shop/cart.ejs
@@ -1,7 +1,6 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/cart.css">
     </head>
-
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
@@ -18,6 +17,11 @@
                         </li>
                     <% }) %>
                 </ul>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                        <button class="btn" type="submit">Order Now!</button>
+                    </form>
+                </div>
             <% } else { %>
                 <h1>No Products in Cart!</h1>
             <% } %>
